tests/purs/failing/RowDiffs/B.purs
module RowDiffs.B where

b = [{ a: { b: 1 } }, { a: { c: 1 } }]
